# videoob-search-provider

./: Makefile.am  README.md  autogen.sh  configure.ac  extension.js
src/: Makefile.am  extension.js  metadata.json  stylesheet.css
