dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(videoob_search, 0.2)

AC_PREFIX_DEFAULT(~/.local/share/gnome-shell/extensions)

AM_INIT_AUTOMAKE([1.11 foreign])

AM_SILENT_RULES([yes])

LT_INIT

AC_OUTPUT([
Makefile
src/Makefile
])
